@@ -61,6 +61,7 @@ Changes:
 - Add useful PHP modules.
 - Add php wrapper for webserver.
 - Add sockstat to Diagnostics|Information|Sockets.
+- Add missing NUT drivers.
 - Use SCSI inquiry for model and serial.
 - Upgrade istgt to 20121028.
 - Upgrade isboot to 0.2.6.
